--- a/integration/02integrationwithlimits.tex
+++ b/integration/02integrationwithlimits.tex
@@ -6,12 +6,12 @@
 
 \begin{exercise}{Bestemte integraler 1-1}
 
-Bestem det værdien af det bestemte integrale
+Bestem værdien af det bestemte integrale
 \[
-I = \int_0^1 x^2 dx
+I = \int_0^1 x^2 \, dx
 \]
 
-$I$ = \answerbox{\frac{1}{3} x^3 + K} \\
+$I$ = \answerbox{\frac{1}{3}} \\
 
 
 \hint
@@ -50,6 +50,372 @@ I = \left( \frac{1}{3} \cdot 1^3 + K \right) - \left( \frac{1}{3} \cdot 0^3 + K 
 
 \end{exercise}
 
+\newpage
 
+\begin{exercise}{Bestemte integraler 1-2}
+	
+	Bestem værdien af det bestemte integrale
+	\[
+	I = \int_1^2 x \, dx
+	\]
+	
+	$I$ = \answerbox{\frac{3}{2}} \\
+	
+	
+	\hint
+	Først skal vi finde stamfunktionen til det ubestemte integrale og derefter kan vi indsætte grænserne.
+	
+	\hint
+	At integrere er det modsatte af at differentiere.
+	
+	\hint
+	Vi skal altså finde en funktion $f(x)$, hvor der gælder at
+	\[
+	f'(x) = x
+	\]
+	
+	\hint
+	Et polynomie differentieres efter formlen:
+	\[
+	\frac{d}{dx} x^n = n \cdot x^{n - 1}
+	\]
+	
+	\hint
+	Løsningen til det bestemte integrale er $f(x) = \frac{1}{2} x^2 + K$.
+	
+	\hint
+	Sæt grænserne ind i løsningen til det bestemte integrale
+	\[
+	I = \left[ \frac{1}{2} x^2 + K \right]_{x=1}^{x=2}
+	\]
+	
+	\hint
+	Forenkl udtrykket
+	\[
+	I = \left( \frac{1}{2} \cdot 2^2 + K \right) - \left( \frac{1}{2} \cdot 1^2 + K \right) = \frac{4}{2} - \frac{1}{2}=  \frac{3}{2}
+	\]
+
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Bestemte integraler 1-3}
+	
+	Bestem værdien af det bestemte integrale
+	\[
+	I = \int_0^1 x^4 \, dx
+	\]
+	
+	$I$ = \answerbox{\frac{1}{5}} \\
+	
+	
+	\hint
+	Først skal vi finde stamfunktionen til det ubestemte integrale og derefter kan vi indsætte grænserne.
+	
+	\hint
+	At integrere er det modsatte af at differentiere.
+	
+	\hint
+	Vi skal altså finde en funktion $f(x)$, hvor der gælder at
+	\[
+	f'(x) = x^4
+	\]
+	
+	\hint
+	Et polynomie differentieres efter formlen:
+	\[
+	\frac{d}{dx} x^n = n \cdot x^{n - 1}
+	\]
+	
+	\hint
+	Løsningen til det bestemte integrale er $f(x) = \frac{1}{5} x^5 + K$.
+	
+	\hint
+	Sæt grænserne ind i løsningen til det bestemte integrale
+	\[
+	I = \left[ \frac{1}{5} x^5 + K \right]_{x=0}^{x=1}
+	\]
+	
+	\hint
+	Forenkl udtrykket
+	\[
+	I = \left( \frac{1}{5} \cdot 1^5 + K \right) - \left( \frac{1}{5} \cdot 0^5 + K \right) = \frac{1}{5}
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Bestemte integraler 1-4}
+	
+	Bestem værdien af det bestemte integrale
+	\[
+	I = \int_0^{\pi} \sin(x) \, dx
+	\]
+	
+	$I$ = \answerbox{2} \\
+	
+	
+	\hint
+	Først skal vi finde stamfunktionen til det ubestemte integrale og derefter kan vi indsætte grænserne.
+	
+	\hint
+	At integrere er det modsatte af at differentiere.
+	
+	\hint
+	Vi skal altså finde en funktion $f(x)$, hvor der gælder at
+	\[
+	f'(x) = \sin(x)
+	\]
+	
+	\hint
+	Ved differentiering af $\cos(x)$ og $\sin(x)$ kan enhedscirklen benyttes. Når der differentieres går man med uret rundt i cirklen - tilsvarende går man mod uret, når der integreres. 
+	% Evt. anden forklaring eller angiv blot formlen for differentiering af trigonometriske funktioner?
+	\[
+	\frac{d}{dx} - \cos(x) = \sin(x)
+	\]
+	
+	\hint
+	Løsningen til det bestemte integrale er $f(x) = -\cos(x) + K$.
+	
+	\hint
+	Sæt grænserne ind i løsningen til det bestemte integrale
+	\[
+	I = \left[- \cos(x) + K \right]_{x=0}^{x=\pi}
+	\]
+	
+	\hint
+	Forenkl udtrykket
+	\[
+	I = \left( - \cos(\pi) + K \right) - \left( - \cos(0) + K \right) = - (-1) + 1 = 2
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Bestemte integraler 1-5}
+	
+		Bestem værdien af det bestemte integrale
+	\[
+	I = \int_0^{\frac{\pi}{2}} \cos(x) \, dx
+	\]
+	
+	$I$ = \answerbox{1} \\
+	
+	
+	\hint
+	Først skal vi finde stamfunktionen til det ubestemte integrale og derefter kan vi indsætte grænserne.
+	
+	\hint
+	At integrere er det modsatte af at differentiere.
+	
+	\hint
+	Vi skal altså finde en funktion $f(x)$, hvor der gælder at
+	\[
+	f'(x) = \cos(x)
+	\]
+	
+	\hint
+	Ved differentiering af $\cos(x)$ og $\sin(x)$ kan enhedscirklen benyttes. Når der differentieres går man med uret rundt i cirklen - tilsvarende går man mod uret, når der integreres. 
+	% Evt. anden forklaring eller angiv blot formlen for differentiering af trigonometriske funktioner?
+	\[
+	\frac{d}{dx} \sin(x) = \cos(x)
+	\]
+	
+	\hint
+	Løsningen til det bestemte integrale er $f(x) = \sin(x) + K$.
+	
+	\hint
+	Sæt grænserne ind i løsningen til det bestemte integrale
+	\[
+	I = \left[ \sin(x) + K \right]_{x=0}^{x=\frac{\pi}{2}}
+	\]
+	
+	\hint
+	Forenkl udtrykket
+	\[
+	I = \left( \sin\left(\frac{\pi}{2}\right) + K \right) - \left( \sin(0) + K \right) = 1 - 0 = 1
+	\]
+	
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Bestemte integraler 1-6}
+	
+	Bestem værdien af det bestemte integrale
+	\[
+	I = \int_0^1 e^x \, dx
+	\]
+	
+	$I$ = \answerbox{e-1} \\
+	
+	
+	\hint
+	Først skal vi finde stamfunktionen til det ubestemte integrale og derefter kan vi indsætte grænserne.
+	
+	\hint
+	At integrere er det modsatte af at differentiere.
+	
+	\hint
+	Vi skal altså finde en funktion $f(x)$, hvor der gælder at
+	\[
+	f'(x) = e^x
+	\]
+	
+	\hint
+	Den afledte af eksponentiel funktionen $e^x$ er lig eksponentiel funktionen selv. 
+	\[
+	\frac{d}{dx} e^x= e^x
+	\]
+	
+	\hint
+	Løsningen til det bestemte integrale er $f(x) = e^x x^3 + K$.
+	
+	\hint
+	Sæt grænserne ind i løsningen til det bestemte integrale
+	\[
+	I = \left[ e^x + K \right]_{x=0}^{x=1}
+	\]
+	
+	\hint
+	Forenkl udtrykket
+	\[
+	I = \left( e^1 + K \right) - \left( e^0 + K \right) = e-1
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Bestemte integraler 1-7}
+	
+	Bestem værdien af det bestemte integrale
+	\[
+	I = \int_0^2 x^2+1 \, dx
+	\]
+	
+	$I$ = \answerbox{\frac{14}{3}} \\
+	
+	
+	\hint
+	Først skal vi finde stamfunktionen til det ubestemte integrale og derefter kan vi indsætte grænserne.
+	
+	\hint
+	At integrere er det modsatte af at differentiere.
+	
+	\hint
+	
+	Ved at benytte sumreglen for integraler kan vi opdele integralet i to.
+	\[
+	\int x^2+ 1 \, dx = \int x^2 \,dx + \int 1 \, dx
+	\]
+	\hint
+	Vi skal altså først finde en funktion $f(x)$, hvor der gælder at
+	\[
+	f'(x) = x^2
+	\]
+	
+	\hint
+	Et polynomie differentieres efter formlen:
+	\[
+	\frac{d}{dx} x^n = n \cdot x^{n - 1}
+	\]
+	
+	\hint
+	Løsningen til det bestemte integrale er $f(x) = \frac{1}{3} x^3 + K_1$.
+		
+	\hint
+	Vi skal  derefter finde en funktion $f(x)$, hvor der gælder at
+	\[
+	f'(x) = 1
+	\]
+	
+	\hint
+	Et polynomie differentieres efter formlen:
+	\[
+	\frac{d}{dx} x^n = n \cdot x^{n - 1}
+	\]
+	
+	\hint
+	Løsningen til det bestemte integrale er $f(x) = x + K_2$.
+	
+	
+	
+	\hint
+	Saml de to bestemte integraler og indsæt grænserne i løsningerne
+	\[
+	I = \left[ \frac{1}{3} x^3 + x + K \right]_{x=0}^{x=2}
+	\]
+	
+	\hint
+	Forenkl udtrykket
+	\[
+	I = \left( \frac{1}{3} \cdot 2^3 + 2+ K \right) - \left( \frac{1}{3} \cdot 0^3 + 0 + K \right) = \frac{8}{3} + 2 = \frac{14}{3}
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Bestemte integraler 1-8}
+	
+	Bestem værdien af det bestemte integrale
+	\[
+	I = \int_0^2 2x^3 \, dx
+	\]
+	
+	$I$ = \answerbox{8} \\
+	
+	
+	\hint
+	Først skal vi finde stamfunktionen til det ubestemte integrale og derefter kan vi indsætte grænserne.
+	
+	\hint
+	For at simplificere integralet sættes konstanten 2 uden for integralet
+	\[
+	= 2 \int x^3 \, dx
+	\]
+	
+	\hint
+	At integrere er det modsatte af at differentiere.
+	
+	\hint
+	Vi skal altså finde en funktion $f(x)$, hvor der gælder at
+	\[
+	f'(x) = x^3
+	\]
+	
+	\hint
+	Et polynomie differentieres efter formlen:
+	\[
+	\frac{d}{dx} x^n = n \cdot x^{n - 1}
+	\]
+	
+	\hint
+	Løsningen til det bestemte integrale er $f(x) = \frac{1}{4} x^4 + K$.
+	
+	\hint
+	Sæt grænserne ind i løsningen til det bestemte integrale
+	\[
+	I = 2 \left[ \frac{1}{4} x^4 + K \right]_{x=0}^{x=2}
+	\]
+	
+	\hint
+	Forenkl udtrykket
+	\[
+	I =2 \left[ \left( \frac{1}{4} \cdot 2^4 + K \right) - \left( \frac{1}{4} \cdot 0^4 + K \right) \right] = 2 \frac{2^4}{4} = \frac{2^4}{2} = 8
+	\]
+	
+	
+\end{exercise}
 
 \end{document}
