--- a/integration/05integrationbypartswithlimits.tex
+++ b/integration/05integrationbypartswithlimits.tex
@@ -4,36 +4,666 @@
 \begin{document}
 \tableofcontents
 
-\begin{exercise}{Integration af basis funktioner 1-1}
+\newpage
 
-Bestem det værdien af det ubestemte integrale
-\[
-I = \int x^2 dx
-\]
-og kald den ukendte konstant for $K$.
-
-$I$ = \answerbox{\frac{1}{3} x^3 + K} \\
-
-\hint
-At integrere er det modsatte af at differentiere.
-
-\hint
-Vi skal altså finde en funktion $f(x)$, hvor der gælder at
-\[
-f'(x) = x^2
-\]
-
-\hint
-Et polynomie differentieres efter formlen:
-\[
-\frac{d}{dx} x^n = n \cdot x^{n - 1}
-\]
-
-\hint
-Løsningen er $f(x) = \frac{1}{3} x^3 + K$.
-
+\begin{exercise}{Partiel integration med grænser 1-1}
+	
+	
+	Bestem værdien af det bestemte integrale
+	\[
+	M = \int_0^1 e^x \cdot x \, dx
+	\]
+	
+	$M$ = \answerbox{1} \\
+	
+	
+	\hint
+	
+	Se at integralet er på formen
+	\[
+	\int u(x) \cdot v'(x) \, dx
+	\]
+	
+	\hint
+	
+	Benyt partiel integration
+	
+	\hint
+	\[
+	\int u(x) \cdot v'(x)\, dx = u(x) \cdot v(x) - \int u'(x) \cdot v(x) \, dx
+	\]
+	\hint
+	
+	Sæt $u(x) = x$ og $v'(x) = e^x$.
+	
+	
+	\hint
+	
+	Differentier $u(x)$ og integrer $v'(x)$.
+	
+	\hint
+	\[
+	\frac{d}{dx}x = 1 \qquad \wedge \qquad \int e^x \, dx = e^x
+	\]
+	
+	\hint
+	
+	Indsæt de fundne størrelser samt grænseværdierne i formlen for partiel integration 
+	\[
+	= \left[x \cdot e^x\right]_{0}^{1} - \int_{0}^{1} 1 \cdot e^x \, dx
+	\]
+	
+	\hint
+	
+	Indsæt grænser og reducer udtrykket
+	\[
+	= 1 \cdot e^1 - 0 \cdot e^0  - \int_{0}^{1} e^x \, dx = e - \int_{0}^{1} e^x \, dx
+	\]
+	
+	\hint
+	Løs det bestemte integrale
+	\[
+	= e - \int_{0}^{1} e^x \, dx = e - \left[ e^x  \right]_{0}^{1} = e - \left[ e^1 - e^0 \right]
+	\]
+	
+	\hint
+	Gang ind i parentesen og forenkl udtrykket
+	
+	\hint
+	\[
+	= e  - e +1	 = 1	
+	\]
+	
+	
+	
 \end{exercise}
 
+\newpage
+
+\begin{exercise}{Partiel integration med grænser 1-2}
+	
+	
+	Bestem værdien af det bestemte integrale
+	\[
+	M = \int_0^\pi \sin(x) \cdot x^2 \, dx
+	\]
+	
+	$M$ = \answerbox{\pi^2-4} \\
+	
+	
+	\hint
+	
+	Se at integralet er på formen
+	\[
+	\int u(x) \cdot v'(x) \, dx
+	\]
+	
+	\hint
+	
+	Benyt partiel integration
+	
+	\hint
+	\[
+	\int u(x) \cdot v'(x)\, dx = u(x) \cdot v(x) - \int u'(x) \cdot v(x) \, dx
+	\]
+	
+	\hint
+	
+	Sæt $u(x) = x^2$ og $v'(x) = \sin(x)$.
+	
+	
+	\hint
+	
+	Differentier $u(x)$ og integrer $v'(x)$.
+	
+	\hint
+	\[
+	\frac{d}{dx}x^2 = 2x \qquad \wedge \qquad \int \sin(x) \, dx = -\cos(x)
+	\]
+	
+	\hint
+	
+	Indsæt de fundne størrelser samt grænseværdierne i formlen for partiel integration 
+	\[
+	= \left[-x^2 \cdot \cos(x) \right]_{0}^{\pi} - \int_{0}^{\pi} -2x \cdot \cos(x)  \, dx
+	\]
+	
+	\hint
+	
+	Indsæt grænser og reducer udtrykket
+	\begin{align*}
+	&= -\pi^2 \cdot \cos(\pi) - 0^2 \cdot \cos(0)   + 2 \int_{0}^{\pi} \cos(x) \cdot x  \, dx \\
+	&= \pi^2 + 2  \int_{0}^{\pi} \cos(x) \cdot x  \, dx
+	\end{align*}
+	
+	\hint 
+	Benyt partiel integration igen til at bestemme integralet
+
+	
+	\hint
+	
+	Sæt $u(x) = x$ og $v'(x) = \cos(x)$.
+	
+	
+	\hint
+	
+	Differentier $u(x)$ og integrer $v'(x)$.
+	
+	\hint
+	\[
+	\frac{d}{dx}x = 1 \qquad \wedge \qquad \int \cos(x) \, dx = \sin(x)
+	\]
+	
+	\hint
+	
+	Indsæt de fundne størrelser samt grænseværdierne i formlen for partiel integration 
+	\[
+	\int_{0}^{\pi} \cos(x) \cdot x  \, dx = \left[ x \cdot \sin(x) \right]_0^\pi - \int_0^\pi 1 \cdot \sin(x) \, dx
+	\]
+	
+	\hint 
+	
+	Indsæt grænser og reducer udtrykket
+	\begin{align*}
+	&= \pi \cdot \sin(\pi) - 0 \cdot \sin(0) - \int_0^\pi \sin(x) \,dx  \\
+	&= - \int_0^\pi \sin(x) \, dx
+	\end{align*}
+	
+	\hint 
+	
+	Løs det bestemte integrale
+	\begin{align*}
+	&= -\left[ -  \cos(x) \right]_0^\pi  \\
+	&= \left[ \cos(x) \right]_0^\pi \\
+	&= \cos(\pi) - \cos(0) \\
+	&= -1 - 1 = -2
+	\end{align*}
+
+	
+	
+	\hint
+	Indsæt udtryk i den samlede løsning
+	\[
+	= \pi^2 + 2 \cdot ( -2 )
+	\]
+	
+	\hint
+	Gang ind i parentesen og forenkl udtrykket
+	
+	\hint
+	\[
+	= \pi ^2 - 4
+	\]
+	
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Partiel integration med grænser 1-3}
+	
+	Bestem værdien af det bestemte integrale
+	\[
+	M = \int_0^{\frac{\pi}{2}} \cos(2x) \cdot x \, dx
+	\]
+	
+	$M$ = \answerbox{- \frac{1}{2}} \\
+	
+	
+	\hint
+	
+	Se at integralet er på formen
+	\[
+	\int u(x) \cdot v'(x) \, dx
+	\]
+	
+	\hint
+	
+	Benyt partiel integration
+	
+	\hint
+	\[
+	\int u(x) \cdot v'(x)\, dx = u(x) \cdot v(x) - \int u'(x) \cdot v(x) \, dx
+	\]
+	\hint
+	
+	Sæt $u(x) = x$ og $v'(x) = \cos(2x)$.
+	
+	
+	\hint
+	
+	Differentier $u(x)$ og integrer $v'(x)$.
+	
+	\hint
+	\[
+	\frac{d}{dx}x = 1 \qquad \wedge \qquad \int \cos(2x) \, dx = \frac{\sin(2x)}{2}
+	\]
+	
+	\hint
+	
+	Indsæt de fundne størrelser samt grænseværdierne i formlen for partiel integration 
+	\[
+	= \left[x \cdot \frac{\sin(2x)}{2}\right]_{0}^{\frac{\pi}{2}} - \int_{0}^{\frac{\pi}{2}} 1 \cdot \frac{\sin(2x)}{2} \, dx
+	\]
+	
+	\hint
+	
+	Indsæt grænser og reducer udtrykket
+	\begin{align*}
+	&=  \frac{\pi}{2} \cdot \sin{\pi} - 0 \cdot \frac{\sin(0)}{2}  - \frac{1}{2} \int_{0}^{\frac{\pi}{2}} \sin(2x)  \, dx  \\
+	& = - \frac{1}{2} \int_{0}^{\frac{\pi}{2}} \sin(2x)  \, dx
+	\end{align*}
+	
+	\hint
+	Løs det bestemte integrale
+	\begin{align*}
+	&= - \frac{1}{2} \left[ - \frac{\cos(2x)}{2}  \right]_{0}^{\frac{\pi}{2}} \\
+	&= \frac{1}{4} \left[ \cos(2x) \right]_{0}^{\frac{\pi}{2}} \\
+	&= \frac{1}{4} \left( \cos(\pi) - \cos(0) \right) 
+	\end{align*}
+	
+	\hint
+	Gang ind i parentesen og forenkl udtrykket
+	
+	\hint
+	\begin{align*}
+	&= \frac{1}{4} (-1 -1) \\
+	&= - \frac{1}{2}
+	\end{align*}
+	
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Partiel integration med grænser 1-4}
+	
+	
+	Bestem værdien af det bestemte integrale
+	\[
+	M = \int_0^{\frac{\pi}{2}} \sin(x) \cdot 2x \, dx
+	\]
+	
+	$M$ = \answerbox{2} \\
+	
+	
+	\hint
+	
+	Se at integralet er på formen
+	\[
+	\int u(x) \cdot v'(x) \, dx
+	\]
+	
+	\hint
+	
+	Benyt partiel integration
+	
+	\hint
+	\[
+	\int u(x) \cdot v'(x)\, dx = u(x) \cdot v(x) - \int u'(x) \cdot v(x) \, dx
+	\]
+	\hint
+	
+	Sæt $u(x) = 2x$ og $v'(x) = e^x$.
+	
+	
+	\hint
+	
+	Differentier $u(x)$ og integrer $v'(x)$.
+	
+	\hint
+	\[
+	\frac{d}{dx}x = 2 \qquad \wedge \qquad \int \sin(x) \, dx = - \cos(x)
+	\]
+	
+	\hint
+	
+	Indsæt de fundne størrelser samt grænseværdierne i formlen for partiel integration 
+	\[
+	= \left[-2x \cdot \cos(x) \right]_{0}^{\frac{\pi}{2}} - \int_{0}^{\frac{\pi}{2}} -2 \cdot \cos(x) \, dx 
+	\]
+	
+	\hint
+	
+	Indsæt grænser og reducer udtrykket
+	\begin{align*}
+	&= - \pi \cdot \cos\left(\frac{\pi}{2}\right) - 0 \cdot \cos(0)  + 2 \int_{0}^{\frac{\pi}{2}} \cos(x) \, dx \\
+	&=  2 \int_{0}^{\frac{\pi}{2}} \cos(x) \, dx 
+	\end{align*}
+	
+	\hint
+	Løs det bestemte integrale
+	\begin{align*}
+	&= 2 \left[ \sin(x) \right]_0^{\frac{\pi}{2}} \\
+	&= 2 \left[ \sin\left(\frac{\pi}{2}\right) - \sin(0)  \right]
+	\end{align*}
+	
+	\hint
+	Gang ind i parentesen og forenkl udtrykket
+	
+	\hint
+	\[
+	= 2 ( 1 - 0) = 2 	
+	\]
+	
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Partiel integration med grænser 1-5}
+	
+	
+	Bestem værdien af det bestemte integrale
+	\[
+	M = \int_0^1 \ln(x) \cdot x \, dx
+	\]
+	
+	$M$ = \answerbox{- \frac{1}{4}} \\
+	
+	
+	\hint
+	
+	Se at integralet er på formen
+	\[
+	\int u(x) \cdot v'(x) \, dx
+	\]
+	
+	\hint
+	
+	Benyt partiel integration
+	
+	\hint
+	\[
+	\int u(x) \cdot v'(x)\, dx = u(x) \cdot v(x) - \int u'(x) \cdot v(x) \, dx
+	\]
+	\hint
+	
+	Sæt $u(x) = \ln(x)$ og $v'(x) = x$.
+	
+	
+	\hint
+	
+	Differentier $u(x)$ og integrer $v'(x)$.
+	
+	\hint
+	\[
+	\frac{d}{dx} \ln(x) = \frac{1}{x}  \qquad \wedge \qquad \int x \, dx = \frac{1}{2} x^2
+	\]
+	
+	\hint
+	
+	Indsæt de fundne størrelser samt grænseværdierne i formlen for partiel integration 
+	\[
+	= \left[\ln(x) \cdot \frac{1}{x}\right]_{0}^{1} - \int_{0}^{1} \frac{1}{x} \cdot \frac{1}{2}x^2 \, dx
+	\]
+	
+	\hint
+	
+	Indsæt grænser og reducer udtrykket
+	\begin{align*}
+	&= \ln(1) \cdot \frac{1}{1}  - \ln(0) \cdot \frac{1}{0}  -  \frac{1}{2} \int_{0}^{1} x  \, dx \\
+	&= -  \frac{1}{2} \int_{0}^{1} x  \, dx 
+	\end{align*}
+	
+	\hint
+	Løs det bestemte integrale
+	\[
+	=  - \frac{1}{2} \left[ \frac{1}{2}x^2  \right]_{0}^{1} = - \frac{1}{4} \left[ 1^2 - 0^2 \right]
+	\]
+	
+	\hint
+	Gang ind i parentesen og forenkl udtrykket
+	
+	\hint
+	\[
+	= - \frac{1}{4} \left[ 1 - 0\right] = -\frac{1}{4}
+	\]
+	
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Partiel integration med grænser 1-6}
+	
+	
+	Bestem værdien af det bestemte integrale
+	\[
+	M = \int_{\frac{\pi}{2}}^\pi - \cos(x) \cdot x \, dx
+	\]
+	
+	$M$ = \answerbox{\frac{\pi}{2}+1} \\
+	
+	
+	\hint
+	
+	Se at integralet er på formen
+	\[
+	\int u(x) \cdot v'(x) \, dx
+	\]
+	
+	\hint
+	
+	Benyt partiel integration
+	
+	\hint
+	\[
+	\int u(x) \cdot v'(x)\, dx = u(x) \cdot v(x) - \int u'(x) \cdot v(x) \, dx
+	\]
+	\hint
+	
+	Sæt $u(x) = x$ og $v'(x) = - \cos(x)$.
+	
+	
+	\hint
+	
+	Differentier $u(x)$ og integrer $v'(x)$.
+	
+	\hint
+	\[
+	\frac{d}{dx}x = 1 \qquad \wedge \qquad \int -\cos(x) \, dx = - \sin(x)
+	\]
+	
+	\hint
+	
+	Indsæt de fundne størrelser samt grænseværdierne i formlen for partiel integration 
+	\[
+	= \left[-x \cdot \sin(x) \right]_{\frac{\pi}{2}}^{\pi} - \int_{\frac{\pi}{2}}^{\pi} -1 \cdot \sin(x)  \, dx
+	\]
+	
+	\hint
+	
+	Indsæt grænser og reducer udtrykket
+	\begin{align*}
+	&= - \pi \cdot \sin(\pi) + \frac{\pi}{2} \cdot \sin\left(\frac{\pi}{2}\right)  - \int_{\frac{\pi}{2}}^{\pi} -\sin(x) \, dx \\
+	&= \frac{\pi}{2}- \int_{\frac{\pi}{2}}^{\pi} -\sin(x) \, dx
+	\end{align*}
+	
+	\hint
+	Løs det bestemte integrale
+	\begin{align*}
+	&= \frac{\pi}{2} - 	\left[ \cos(\pi) \right]_{\frac{\pi}{2}}^{\pi} \\
+	&= \frac{\pi}{2} - \left[ \cos(\pi) - \cos\left(\frac{2}{\pi}\right) \right] \\
+	&=  \frac{\pi}{2} - (-1 - 0)
+	\end{align*}
+	
+	\hint
+	Forenkl udtrykket
+	
+	\hint
+	\[
+	= \frac{\pi}{2} + 1
+	\]
+	
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Partiel integration med grænser 1-7}
+	
+	
+	Bestem værdien af det bestemte integrale
+	\[
+	M = \int_1^e \frac{2 \ln(x)}{x^2}  \, dx
+	\]
+	
+	$M$ = \answerbox{- \frac{4}{e}+2} \\
+	
+	\hint
+	Sæt konstanten 2 udenfor integralet
+	\[
+	= 2 \left( \int_1^e \frac{\ln(x)}{x^2}  \, dx	\right)
+	\]
+	
+	\hint
+	
+	Se at integralet er på formen
+	\[
+	\int u(x) \cdot v'(x) \, dx
+	\]
+	
+	\hint
+	
+	Benyt partiel integration
+	
+	\hint
+	\[
+	\int u(x) \cdot v'(x)\, dx = u(x) \cdot v(x) - \int u'(x) \cdot v(x) \, dx
+	\]
+	\hint
+	
+	Sæt $u(x) = \ln(x)$ og $v'(x) = \frac{1}{x^2}$.
+	
+	
+	\hint
+	
+	Differentier $u(x)$ og integrer $v'(x)$.
+	
+	\hint
+	\[
+	\frac{d}{dx} \ln(x) = \frac{1}{x} \qquad \wedge \qquad \int \frac{1}{x^2} \, dx = - \frac{1}{x}
+	\]
+	
+	\hint
+	
+	Indsæt de fundne størrelser samt grænseværdierne i formlen for partiel integration 
+	\begin{align*}
+	&= 2 \left( \left[\ln(x) \cdot \frac{-1}{x} \right]_{1}^{e} - \int_{1}^{e} \frac{1}{x} \cdot \frac{-1}{x} \, dx \right) \\
+	&=2 \left( \left[\frac{-\ln(x)}{x} \right]_{1}^{e} + \int_{1}^{e} \frac{1}{x^2} \, dx \right)
+	\end{align*}
+	
+	\hint
+	
+	Indsæt grænser og reducer udtrykket
+	\begin{align*}	
+	&= 2 \left( -\frac{\ln(e)}{e} +\frac{\ln(1)}{1}  + \int_{1}^{e} \frac{1}{x^2} \, dx \right) \\
+	&=2 \left( -\frac{1}{e}  + \int_{1}^{e} \frac{1}{x^2} \, dx \right)
+	\end{align*}
+	
+	\hint
+	Løs det bestemte integrale
+	\begin{align*}
+	&= 2 \left( -\frac{1}{e}  + \left[- \frac{1}{x}	\right]_1^e	\right)  \\
+	&=  2 \left( -\frac{1}{e}  + \left[- \frac{1}{e} + \frac{1}{1}	\right]\right) 
+	\end{align*}
+	
+	\hint
+	Gang ind i parentesen og forenkl udtrykket
+	
+	\hint
+	\begin{align*}
+	&=  2 \left( -\frac{1}{e}  + \left[- \frac{1}{e} +  1	\right]\right) \\
+	&= 2 \left( -\frac{2}{e} +  1\right) \\
+	&= \frac{-4}{e} + 2 
+	\end{align*}
+	
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Partiel integration med grænser 1-8}
+	
+	
+	Bestem værdien af det bestemte integrale
+	\[
+	M = \int_0^2 e^{3x} \cdot x \, dx
+	\]
+	
+	$M$ = \answerbox{\frac{5}{9}x^6+\frac{1}{9}} \\
+	
+	
+	\hint
+	
+	Se at integralet er på formen
+	\[
+	\int u(x) \cdot v'(x) \, dx
+	\]
+	
+	\hint
+	
+	Benyt partiel integration
+	
+	\hint
+	\[
+	\int u(x) \cdot v'(x)\, dx = u(x) \cdot v(x) - \int u'(x) \cdot v(x) \, dx
+	\]
+	\hint
+	
+	Sæt $u(x) = x$ og $v'(x) = e^{3x}$.
+	
+	
+	\hint
+	
+	Differentier $u(x)$ og integrer $v'(x)$.
+	
+	\hint
+	\[
+	\frac{d}{dx}x = 1 \qquad \wedge \qquad \int e^{3x} \, dx = \frac{e^{3x}}{3}
+	\]
+	
+	\hint
+	
+	Indsæt de fundne størrelser samt grænseværdierne i formlen for partiel integration 
+	\[
+	= \left[x \cdot \frac{e^{3x}}{3}\right]_{0}^{2} - \int_{0}^{2} 1 \cdot \frac{e^{3x}}{3} \, dx
+	\]
+	
+	\hint
+	
+	Indsæt grænser og reducer udtrykket
+	\begin{align*}
+	&= \frac{2}{3} e^6 - 0 \cdot \frac{e^0}{3}  -  \frac{1}{3} \int_{0}^{2} e^{3x} \, dx \\
+	&= \frac{2}{3} e^6 - \frac{1}{3} \int_{0}^{2} e^{3x} \, dx 
+	\end{align*}
+	
+	\hint
+	Løs det bestemte integrale
+	\begin{align*}
+	&= \frac{2}{3} e^6 - \frac{1}{3} \left[\frac{e^{3x}}{3} \right]_0^2  \\
+	&= \frac{2}{3} e^6 - \frac{1}{9} \left[e^{6}-e^0\right] 
+	\end{align*}
+	
+	\hint
+	Gang ind i parentesen og forenkl udtrykket
+	
+	\hint
+	\begin{align*}
+	&= \frac{2}{3} e^6 - \frac{1}{9} e^{6} + \frac{1}{9} \\
+	&= \frac{5}{9} e^6 + \frac{1}{9}
+	\end{align*}
+	
+	
+	
+\end{exercise}
 
 
 \end{document}
